[gd_scene load_steps=6 format=2]

[ext_resource path="res://coin.png" type="Texture" id=1]
[ext_resource path="res://Quicksilver/Regular_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Upgrades/Tooltip.gd" type="Script" id=3]
[ext_resource path="res://Quicksilver/Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 4 )

[node name="Tooltip" type="Panel"]
pause_mode = 2
margin_right = 308.0
margin_bottom = 99.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 298.0
margin_bottom = 20.0
mouse_filter = 2

[node name="LblName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Test name"

[node name="PriceContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 298.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="TexCoin" type="TextureRect" parent="VBoxContainer/HBoxContainer/PriceContainer"]
margin_left = 94.0
margin_right = 110.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 14 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="LblPrice" type="Label" parent="VBoxContainer/HBoxContainer/PriceContainer"]
margin_left = 114.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblDescription" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 298.0
margin_bottom = 42.0
text = "Test description"
autowrap = true
